Modify gradle opts